[gd_scene load_steps=4 format=2]

[ext_resource path="res://mini/dance/scripts/dance_minigame.gd" type="Script" id=1]
[ext_resource path="res://mini/dance/fonts/score_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://mini/dance/images/ui/arrow_target.png" type="Texture" id=3]

[node name="DanceMinigame" type="Node2D"]
script = ExtResource( 1 )
_instruction = "Dance, Dance, Dance!"

[node name="Background" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 480.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 320, -60 )
__meta__ = {
"_edit_lock_": true
}

[node name="Targets" type="Node2D" parent="."]
position = Vector2( 320, 400 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="Sprite" parent="Targets"]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( -120, 0 )
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Down" type="Sprite" parent="Targets"]
modulate = Color( 1, 0.501961, 0, 1 )
position = Vector2( -40, 0 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Up" type="Sprite" parent="Targets"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 40, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Right" type="Sprite" parent="Targets"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 120, 0 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="ArrowTimer" to="." method="_spawn_arrow"]
